created base html layout

--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <header>
+        <h2>What 2 Watch</h2>
+    </header>
+    <section id="searchBar">
+        <form action="/action_page.php">
+            <input type="text" placeholder="Search Movie.." name="search">
+            <button type="submit" class="btn">Go!</i></button>
+        </form>
+    </section>
+    <section id="api1">
+        <h3></h3>
+    </section>
+    <section id="api2">
+        <h3></h3>
+    </section>
+    <script src="./assets/script.js"></script>
 </body>
+
 </html>
