--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <title>What 2 Watch</title>
 </head>
 <body>
-    
+    <section class="hero is-primary">
+  <div class="hero-body">
+    <p class="title">
+      What 2 Watch 
+    </p>
+    <p class="subtitle">
+      Created by: Coc Ley, Brooke White, Lukas Durkin, Courtney Einsig 
+    </p>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
