start on localstorage

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <input type="text" placeholder="Search Movie.." name="search">
             <button type="submit" class="btn">Go!</i></button>
         </form>
+        <ul id="searchHistory"></ul>
     </section>
     <section id="api1">
         <h3></h3>
