Connected OMDB API in JS. Also, corrected css link in html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Google Fonts (Optional) -->
 
     <!-- Our Custom CSS link all must be loaded above before our CSS-->
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
 </head>
 
 <body>
@@ -24,8 +24,8 @@
         <h2>What 2 Watch</h2>
     </header>
     <section id="searchBar">
-        <form action="/action_page.php">
-            <input type="text" placeholder="Search Movie.." name="search">
+        <form id="user-form">
+            <input class="movieInput" type="text" placeholder="Search Movie.." name="search">
             <button type="submit" class="btn">Go!</i></button>
         </form>
     </section>
@@ -35,6 +35,8 @@
     <section id="api2">
         <h3></h3>
     </section>
+
+
     <!-- Bootstrap Script for JS functionality -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous">
