finish local storage and add remove btn

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <header>
         <h2>What 2 Watch</h2>
     </header>
-    <section id="searchBar">
-        <form action="/action_page.php">
-            <input type="text" placeholder="Search Movie.." name="search">
-            <button type="submit" class="btn">Go!</i></button>
+    <section>
+        <form id="searchBar" name="text">
+            <input id="searchText" type="text" placeholder="Search Movie.." name="search">
         </form>
         <ul id="searchHistory"></ul>
     </section>
