--- a/index.html
+++ b/index.html
@@ -5,45 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>What 2 Watch</title>
-
-<body>
-<section> 
-    <div id = "MoviesDB-Table" class = "comparison-table">
-        <h3>MoviesDB</h3>
-        <p id="MoviesDBData">Comparing results...</p>
-
-    <div id = "TMBD-Table" class = "comparison-table">
-        <h3>TMBD</h3>
-        <p id="TMBDData">Comparing results...</p>
-
-</section>
-<html lang="en">
-
-<html>
-  <head>
-    <title>What 2 Watch</title>
-  </head>
-
-<body>
-
-    <!-- Google Fonts (Optional) -->
-
-    <!-- Our Custom CSS link all must be loaded above before our CSS-->
-    <link rel="stylesheet" href="./assets/style.css" />
 </head>
 
-<html>
-  
 <body>
+    <!-- Header code -->
+    <section class="hero is-primary is-small">
+        <div class="hero-body">
+            <p class="title">
+                What 2 Watch
+            </p>
+            <img src="./assets/Images/sean-benesh-6Nbo9Pn0yJA-unsplash.jpg" id="headimg" alt="Movies in a store">
+            <p class="subtitle">
+                Created by: Coc Ley, Lukas Durkin, Brooke White, Courtney Einsig
+            </p>
+        </div>
+    </section>
+    <!-- Search Bar -->
     <section id="searchBar">
-        <form id="user-form">
-            <input class="movieInput" type="text" placeholder="Search Movie.." name="search">
-
- <section id="searchBar">
         <form action="/action_page.php">
             <input type="text" placeholder="Search Movie.." id="inputBar" name="search">
-            <button type="submit" id="submitButton" class="btn">Go!</i></button>
+            <button type="submit" id="submitButton" class="btn" class="button is-link is-outlined">Go!</i></button>
         </form>
         <ul id="searchHistory"></ul>
     </section>
@@ -53,44 +37,51 @@
     <section id="api2">
         <h3></h3>
     </section>
+    <!-- Comparision Table -->
+    <section>
+        <div class="columns">
+            <div class="column">
+                <div id="MoviesDB-Table" class="comparison-table">
+                    <h3>MoviesDB</h3>
+                    <p id="MoviesDBData">Comparing results...</p>
+                    <script>
+                        fetch('https://rapidapi.com/standingapi-standingapi-default/api/moviesdb5/')
+                            .then(response => respson.json())
+                            .then(data => {
+                                const dataElement = document.getElementById('MovidesDBData');
+                                dataElement.textContent = `What 2 Watch: ${MoviesDBData}`;
+                            })
+                            .catch(error => {
+                                console.error('Eror fetching data:', error);
+                            });
+                    </script>
+                </div>
+            </div>
 
-
-<section> 
-    <div id = "MoviesDB-Table" class = "comparison-table">
-        <h3>MoviesDB</h3>
-        <p id="MoviesDBData">Comparing results...</p>
-        <script>
-            fetch('https://rapidapi.com/standingapi-standingapi-default/api/moviesdb5/')
-            .then(response => respson.json() )
-            .then(data => {
-                const  dataElement = document.getElementById('MovidesDBData');
-                dataElement.textContent = `What 2 Watch: ${MoviesDBData}`;
-            })
-            .catch(error => {
-                console.error('Eror fetching data:', error);
-            });
-        </script>
-    <div id = "TMBD-Table" class = "comparison-table">
-        <h3>TMBD</h3>
-        <p id="TMBDData">Comparing results...</p>
-        <script>
-            fetch('https://developers.themoviedb.org/3/getting-started/introduction')
-            .then(response => respson.json() )
-            .then(data => {
-                const  dataElement = document.getElementById('TMBDData');
-                dataElement.textContent = `What 2 Watch: ${TMBDData}`;
-            })
-            .catch(error => {
-                console.error('Eror fetching data:', error);
-            });
-        </script>
-</section>
+            <div class="column">
+                <div id="TMBD-Table" class="comparison-table">
+                    <h3>TMBD</h3>
+                    <p id="TMBDData">Comparing results...</p>
+                    <script>
+                        fetch('https://developers.themoviedb.org/3/getting-started/introduction')
+                            .then(response => respson.json())
+                            .then(data => {
+                                const dataElement = document.getElementById('TMBDData');
+                                dataElement.textContent = `What 2 Watch: ${TMBDData}`;
+                            })
+                            .catch(error => {
+                                console.error('Eror fetching data:', error);
+                            });
+                    </script>
+                </div>
+            </div>
+    </section>
 
 
     <!-- Bootstrap Script for JS functionality -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous">
-    </script>
+        </script>
 
     <!-- jQuery Loaded in via CDN script tag -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
