adjust localstorage to fit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <section id="searchBar">
         <form id="user-form">
-            <input class="movieInput" type="text" placeholder="Search Movie.." name="search">
+            <input id="searchText" class="movieInput" type="text" placeholder="Search Movie.." name="search">
             <button type="submit" id="submitButton" class="btn">Go!</i></button>
         </form>
         <ul id="searchHistory"></ul>
