--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
+<!DOCTYPE html>
 <html lang="en">
+
+<head>
     <!-- Our Custom CSS link all must be loaded above before our CSS-->
-<link rel="stylesheet" href="./assets/style.css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>What 2 Watch</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/style.css"/>
 </head>
 
 <body>
@@ -37,4 +44,5 @@
     <!-- All must be loaded before our own personal script.js -->
     <script type="text/javascript" src="./assets/script.js"></script>
 </body>
+
 </html>
