--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- index.html -->
 <!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,18 +17,17 @@
         <div class="hero-body">
             <p class="title">
                 What 2 Watch
-            </p>
             <img src="./assets/Images/sean-benesh-6Nbo9Pn0yJA-unsplash.jpg" id="headimg" alt="Movies in a store">
-            <p class="subtitle">
-                Created by: Coc Ley, Lukas Durkin, Brooke White, Courtney Einsig
             </p>
         </div>
     </section>
     <!-- Search Bar -->
-    <section id="searchBar">
+    <section class="field" id="searchBar">
         <form action="/action_page.php">
-            <input type="text" placeholder="Search Movie.." id="inputBar" name="search">
-            <button type="submit" id="submitButton" class="btn" class="button is-link is-outlined">Go!</i></button>
+            <input class="input is-large" type="text" placeholder="Search Movie.." id="inputBar" name="search">
+            <button class="button is-primary" class="button is-info" type="submit" id="submitButton"
+                class="btn">Go!</i></button>
+            </div>
         </form>
         <ul id="searchHistory"></ul>
     </section>
@@ -44,6 +44,7 @@
                 <div id="MoviesDB-Table" class="comparison-table">
                     <h3>MoviesDB</h3>
                     <p id="MoviesDBData">Comparing results...</p>
+                    <p id== "omdbRating">Rating: </p>
                     <script>
                         fetch('https://rapidapi.com/standingapi-standingapi-default/api/moviesdb5/')
                             .then(response => respson.json())
@@ -62,6 +63,7 @@
                 <div id="TMBD-Table" class="comparison-table">
                     <h3>TMBD</h3>
                     <p id="TMBDData">Comparing results...</p>
+                    <p id="tmdbRating">Rating:</p>
                     <script>
                         fetch('https://developers.themoviedb.org/3/getting-started/introduction')
                             .then(response => respson.json())
@@ -96,6 +98,12 @@
     <!-- All must be loaded before our own personal script.js -->
     <script type="text/javascript" src="./assets/script.js"></script>
 
+    <footer class="footer">
+        <div class="content has-text-centered">
+          <p>
+            Created by: Coc Ley, Lukas Durkin, Brooke White, Courtney Einsig
+          </p>
+        </div>
+      </footer>
 </body>
-
 </html>
