--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <!-- Search Bar -->
     <section class="field" id="searchBar">
         <form id="user-form">
-            <input id="searchText" class="movieInput" class="input is-large" type="text" placeholder="Search Movie.."
+            <input id="searchText" class="movieInput input is-large"  type="text" placeholder="Search Movie.."
                 name="search">
-            <button class="button is-primary" class="button is-info" type="submit" id="submitButton"
+            <button class="button is-primary"  type="submit" id="submitButton"
                 class="btn">Go!</i></button>
             </div>
         </form>
