--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <div id="MoviesDB-Table" class="comparison-table">
                     <h3>MoviesDB</h3>
                     <p id="MoviesDBData">Comparing results...</p>
+                    <p id="titleOne">Title: </p>
                     <p id="omdbRating">Rating: </p>
                 </div>
             </div>
@@ -53,7 +54,9 @@
                 <div id="TMBD-Table" class="comparison-table">
                     <h3>TMBD</h3>
                     <p id="TMBDData">Comparing results...</p>
-                    <p id="tmdbRating">Rating:</p>
+                    <p id="titleTwo">Title: </p>
+                    <p id="tmdbRating">Rating: </p>
+                    
                 </div>
             </div>
     </section>
