--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <p id="MoviesDBData">Comparing results...</p>
                     <p id="titleOne">Title: </p>
                     <p id="omdbRating">Rating: </p>
+                    <img style= "height: 500px;" id="posterOne"></img>
                 </div>
             </div>
 
@@ -56,7 +57,7 @@
                     <p id="TMBDData">Comparing results...</p>
                     <p id="titleTwo">Title: </p>
                     <p id="tmdbRating">Rating: </p>
-                    
+                    <img style= "height: 500px;" id="posterTwo"></img>
                 </div>
             </div>
     </section>
