fixed bug, added font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/style.css">
     <title>What 2 Watch</title>
@@ -23,10 +25,9 @@
     <!-- Search Bar -->
     <section class="field" id="searchBar">
         <form id="user-form">
-            <input id="searchText" class="movieInput input is-large"  type="text" placeholder="Search Movie.."
+            <input id="searchText" class="movieInput input is-large" type="text" placeholder="Search Movie.."
                 name="search">
-            <button class="button is-primary"  type="submit" id="submitButton"
-                class="btn">Go!</i></button>
+            <button class="button is-primary" type="submit" id="submitButton" class="btn">Go!</i></button>
             </div>
         </form>
     </section>
@@ -37,7 +38,7 @@
             <div class="column is-2">
                 <div id="searchBox">
                     <h3>Search History:</h3>
-                  <ul id="searchHistory"></ul>  
+                    <ul id="searchHistory"></ul>
                 </div>
             </div>
             <div class="column is-5">
@@ -46,7 +47,7 @@
                     <p id="MoviesDBData">Comparing results...</p>
                     <p id="titleOne">Title: </p>
                     <p id="omdbRating">Rating: </p>
-                    <img style= "height: 500px;" id="posterOne"></img>
+                    <img style="height: 500px;" id="posterOne"></img>
                 </div>
             </div>
 
@@ -56,9 +57,10 @@
                     <p id="TMBDData">Comparing results...</p>
                     <p id="titleTwo">Title: </p>
                     <p id="tmdbRating">Rating: </p>
-                    <img style= "height: 500px;" id="posterTwo"></img>
+                    <img style="height: 500px;" id="posterTwo"></img>
                 </div>
             </div>
+        </div>
     </section>
 
 
